<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulletin Buzz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">UserName</string>
    <string name="pwd">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="pwdhint">password</string>
    <string name="attempts">Attempts left</string>
    <string name="Login">Login</string>
    <string name="noAtmt">3</string>
    <string name="un_hint">Internet username </string>
    <string name="namelogin"> Welcome </string>
    
    <string name="NStatus"> Latest</string>
    <string name="Description">Description</string>
    <!-- Strings related to 2nd page -->
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Dept</string>
    <string name="title_section2">Technology</string>
    <string name="title_section3">Sports</string>
    <string name="title_section4">Books</string>
    <string name="title_section5">Events</string>
    <string name="title_section6">Carrier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main_act2">MainAct2</string>
   <string name="QnA">Questions-Answers...</string>
    
</resources>
